# EmissionEye

./: .env.example  .gitignore  LICENSE  README.md
backend/: geojson.json  pyproject.toml
backend/src/: app.py  config.py  loader.py
backend/src/api/: factories.py  geojson.py  routers.py  sensors.py
backend/src/data/: factory.json  geo.json
backend/src/gaussian_distribution/: disperse.py  process.py  rsdm.py  visualise.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/icons/: factory.vue  sensor.vue
frontend/src/modules/: api.js
frontend/src/store/: index.js
frontend/src/views/: HomeView.vue
